Enhance question retrieval and display logic with detailed answer handling and user feedback

--- a/frontend/teszt_kerdesek/Frontend/index.html
+++ b/frontend/teszt_kerdesek/Frontend/index.html
@@ -41,6 +41,8 @@
     </table>
     <button onclick="kerdesek_lekerese()">Kérdések lekérése</button>
   </div>
+  <hr>
+  <div id="tesztKontener"></div>
 </body>
 <script src="script.js"></script>
 </html>
